# foodgram-st

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.cfg
backend/api/: apps.py  filters.py  paginators.py  serializers.py  urls.py  views.py
backend/api/services/: pdf.py
backend/config/: settings.py  urls.py
backend/config/templates/admin/: base.html
backend/recipes/: admin.py  apps.py  models.py  urls.py  views.py
backend/recipes/management/commands/: import_ingredients_from_json.py
backend/recipes/migrations/: 0001_initial.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
frontend/src/: App.js
frontend/src/pages/about/: index.js
frontend/src/pages/technologies/: index.js
nginx/: nginx.conf
